--- a/src/main/webapp/WEB-INF/jsp/main.zul
+++ b/src/main/webapp/WEB-INF/jsp/main.zul
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <zk xmlns="http://www.zkoss.org/2005/zul">
-<window id="loginwin" border="0" apply="net.example.payment.system.zk_composers.mainpage.MainComposer" width="100%"
+<window id="loginwin" border="0" apply="" width="100%"
         height="100%">
 <borderlayout sclass="complex-layout" height="100%" width="100%">
 <north height="40px" border="0">
-    <include src="/WEB-INF/jsp/header.zul"/>
+    <!--<include src="/WEB-INF/jsp/header.zul"/>-->
 </north>
 <west autoscroll="true" sclass="right_menu" collapsible="true" id="west" border="0" width="290px">
 <div style="margin-right:5px;">
